@@ -22,6 +22,9 @@ RELEASE X.X.X - XXX
 
     - Fix interaction of $CHANGED_SOURCES with the --config=force option.
 
+    - Fix finding #include files when the string contains escaped
+      backslashes like "C:\\some\\include.h".
+
   From Robert P. J. Day:
 
     - User's Guide updates.
